--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,3 +1,3 @@
-bahram.username=John
-bahram.password=duralaburdan
+bahram.username=Data Username
+bahram.password=Data Password
 bahram.dburl=asdfgh
