13th Commit: Spring Boot application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.profiles.active=de
+
+
+
+bahram.username=Data Username
+bahram.password=Data Password
+bahram.dburl=asdfgh
+
+
+
+bahram.jms.username=JMS Username
+bahram.jms.password=Jms Password
+bahram.jms.dburl=qwerty
